--- a/my-app/src/app/services-home/services-home.component.html
+++ b/my-app/src/app/services-home/services-home.component.html
@@ -1,8 +1,28 @@
 <div class="myServices">
-    <h3 appHighlight class="businessCardTitle">My Services</h3>
-    <ul>
+    <h3 [appHighlight]="color" class="businessCardTitle">My Services</h3>
+    <!-- <ul>
         <li>Consulting</li>
         <li>Business Analysis</li>
         <li>Customer Service</li>
+    </ul> -->
+    <!-- <ul>
+        <li *ngFor="let bankingService of bankingServices">{{bankingService}}</li>
+    </ul> -->
+    <!-- <ul *ngFor="let bankingService of bankingServices">
+        <li *ngIf="bankingService.years > 2">{{bankingService.type}}</li>
+    </ul> -->
+    <ul *ngFor="let bankingService of bankingServices" [ngSwitch]="bankingService.category">
+        <li *ngSwitchCase="'loans'">
+            {{bankingService.type}}
+        </li>
+        <li *ngSwitchCase="'reports'">
+            {{bankingService.type}}
+        </li>
+        <li *ngSwitchCase="'financial_accounts'">
+            {{bankingService.type}}
+        </li>
+        <li *ngSwitchDefault>
+            {{bankingService.type}}
+        </li>
     </ul>
 </div>
